--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -2,36 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  position: fixed;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
 main::-webkit-scrollbar {
-    width: 0.9rem;
+  width: 0.9rem;
 }
 
 main::-webkit-scrollbar-thumb {
-    background-image: linear-gradient(180deg, #d0368a 0%, #708ad4 99%);
+  background-image: linear-gradient(180deg, #d0368a 0%, #708ad4 99%);
 
-    border-radius: 100px;
+  border-radius: 100px;
 
-    border: 5px solid transparent;
-    background-clip: content-box;
+  border: 5px solid transparent;
+  background-clip: content-box;
 }
 
 main::-webkit-scrollbar-track {
-    background-color: #1e252b;
-
-    margin-bottom: 12.5rem;
-    transition: all;
+  background-color: #1e252b;
 }
 
 .scrollbar-hide::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 .ql-toolbar {
-    border-top-right-radius: 0.5rem;
-    border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
 }
 
 .ql-container {
-    border-bottom-right-radius: 0.5rem;
-    border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
 }
